# SNF

./: ..gitattributes.swp  .gitattributes  .gitignore  LICENSE  README.md  go.mod  go.sum
.github/workflows/: cmake-single-platform.yml  server-c.yml
Client/Java/SRBNP/: .project
Client/Java/SRBNP/src/SRBNP/: ClientInfo.java  Connection.java
Client/Java/src/SNF/: CString.java  ClientInfo.java  Connection.java  OPcode.java  Request.java  Utility.java
Client/Java/src/SNF/Exceptions/: CStringInvalidException.java  OPCodeIncompatibleRanksException.java  OPCodeInvalidRankException.java  OPCodeNotInitializedException.java  OPCodeUnregistredRankValueException.java  RequestsHandlerNotInitializedException.java
Client/Java/src/SNF/OPCode/: Base.java  Member.java
Client/Java/src/SNF/Requests/: Handler.java  Listener.java
Client/Java/src/SRBNP/: CString.java  ClientInfo.java  Connection.java  OPcode.java  Request.java  RequestsHandler.java  ResponseListener.java  Utility.java  _BASE_OPCODE.java
Client/Java/src/SRBNP/Exceptions/: CStringInvalidException.java  InvalidCStringException.java  OPCodeIncompatibleRanksException.java  OPCodeInvalidRankException.java  OPCodeNotInitializedException.java  OPCodeUnregistredRankValueException.java  RequestsHandlerNotInitializedException.java
Client/Java/src/SRBNP/OPCode/: Base.java  Member.java
Client/Java/src/SRBNP/Requests/: Handler.java  Listener.java
Client/dotnet/SNFClient/: Callbacks.cs  ClientInfo.cs  Connection.cs  Exceptions.cs  OPCode.cs  Request.cs  SNFClient.csproj  SNFClient.sln  Utility.cs
Server/C/: INSTALL.md  README.md  SNF.h  SRBNP.h  _service_deploy  _service_deploy.sh  _service_systemVinit  _service_systemVinit.sh  build.sh  main.c  makefile
Server/C/CMake/: CMakeLists.txt  CMakeShared.txt  CMakeTests.txt
Server/C/CMake-dev/: CMakeLists.txt
Server/C/SQLite/: makefile
Server/C/SRBNP/: _BASE_OPCODE.h  _Imports.h  clt.c  clt.h  epoll.c  epoll.h  hashtable.c  hashtable.h  locate3.h  network.c  network.h  request.c  request.h  sqlite.c  sqlite.h  thpool.c  thpool.h  utility.c  utility.h
Server/C/src/: SNF.c  SNF.h  SRBNP.h  _BASE_OPCODE.h  clt.c  clt.h  cmds.c  cmds.h  epoll.c  epoll.h  hashtable.c  hashtable.h  locate3.c  lookup3.h  network.c  network.h  opcode.c  opcode.h  request.c  request.h  thpool.c  thpool.h  utility.c  utility.h  vars.c  vars.h
Server/C/src/SNF/: SNF.h  clt.h  cmds.h  epoll.h  hashtable.h  opcode.h  request.h  thpool.h  vars.h
Server/C/tests/: opcode.c  opcode.test  thpool.c  thpool.test  vars.c  vars.test
go/Client/: connection.go  connection_unix.go  connection_windows.go  request.go  vars.go
go/Core/: errors.go  opcode.go  request.go  vars.go
go/Server/: Client.go  Network.go  network_unix.go  network_windows.go  opcodes.go  requests.go  vars.go
